--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "build:watch": "babel src -x '.js' -w --source-maps  -d lib",
     "lint": "eslint src/**",
     "lint:tests": "eslint spec/**",
-    "test": "npm run lint && ./node_modules/.bin/karma start --browsers PhantomJS --single-run",
-    "test:watch": "karma start --browsers PhantomJS",
-    "test:mac": "karma start --single-run --browsers Chrome,Firefox,Safari"
+    "test": "npm run lint && asset-pipeline-karma",
+    "test:watch": "asset-pipeline-karma -w",
+    "test:mac": "asset-pipeline-karma -b"
+  },
+  "assets":{
+    "assets_in": "./src",
+    "assets_out": "./lib",
+    "karma":{
+      "input":"./spec"
+    }
   },
   "babel": {
     "presets": [
@@ -46,6 +53,7 @@
   },
   "homepage": "https://github.com/djforth/morse-utils#readme",
   "devDependencies": {
+    "@djforth/ap_karma": "1.0.0",
     "@djforth/cookie_mgmt_fp": "^1.0.2",
     "@djforth/morse-jasmine": "^1.0.8",
     "babel": "^6.5.2",
@@ -57,26 +65,10 @@
     "browserify": "^13.0.0",
     "eslint": "^2.2.0",
     "eslint-config-google": "^0.4.0",
-    "eslint-plugin-standard": "^1.3.2",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.21",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-browserify": "^5.0.2",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-coverage": "^0.5.3",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.7",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-story-reporter": "^0.3.1",
-    "lodash": "^4.6.0",
-    "phantomjs-prebuilt": "^2.1.4",
-    "rewireify": "^0.2.5",
-    "watchify": "^3.7.0"
+    "lodash": "^4.6.1"
   },
   "peerDependencies": {
     "@djforth/cookie_mgmt_fp": "^1.0.2",
-    "lodash": "^4.6.0"
+    "lodash": "^4.6.1"
   }
 }
