--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build:watch": "babel src -x '.js' -w --source-maps  -d lib",
     "lint": "eslint src/**",
     "lint:tests": "eslint spec/**",
-    "test": "npm run lint && asset-pipeline-karma",
-    "test:watch": "asset-pipeline-karma -w",
-    "test:mac": "asset-pipeline-karma -b"
+    "test": "./node_modules/karma/bin/karma start --browsers PhantomJS --single-run",
+    "test:mac": "./node_modules/karma/bin/karma start --browsers Chrome,Firefox,Safari  --single-run",
+    "test:watch": "node --max_old_space_size=4096 ./node_modules/karma/bin/karma start --browsers PhantomJS"
   },
   "assets": {
     "assets_in": "./src",
@@ -20,21 +20,18 @@
     }
   },
   "babel": {
+    "plugins": [
+      "react-hot-loader/babel"
+    ],
     "presets": [
-      "es2015"
+      "es2015",
+      "es2016",
+      "es2017",
+      "react"
     ]
   },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
-    ]
+  "eslintConfig": {
+    "extends": "morsedigital"
   },
   "repository": {
     "type": "git",
@@ -53,22 +50,42 @@
   },
   "homepage": "https://github.com/djforth/morse-utils#readme",
   "devDependencies": {
-    "@djforth/ap_karma": "1.0.0",
     "@djforth/cookie_mgmt_fp": "^1.0.2",
-    "@djforth/morse-jasmine": "^1.0.8",
-    "babel": "^6.5.2",
-    "babel-cli": "^6.6.0",
-    "babel-eslint": "^5.0.0",
-    "babel-polyfill": "^6.6.1",
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "eslint": "^2.2.0",
-    "eslint-config-google": "^0.4.0",
-    "lodash": "^4.6.1"
+    "@djforth/morse-jasmine-wp": "^2.4.2",
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-istanbul": "2.0.1",
+    "babel-plugin-rewire": "^1.0.0",
+    "babel-plugin-rewire-ignore-coverage": "^1.0.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-airbnb": "^2.1.1",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-es2017": "^6.16.0",
+    "eslint": "^3.7.1",
+    "eslint-config-google": "^0.6.0",
+    "eslint-config-morsedigital": "^1.0.3",
+    "eslint-plugin-jasmine": "^1.8.1",
+    "karma": "^1.3.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-story-reporter": "^0.3.1",
+    "karma-webpack": "^1.8.0",
+    "lodash": "~4.16.3",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
   },
   "peerDependencies": {
     "@djforth/cookie_mgmt_fp": "^1.0.2",
-    "lodash": "^4.6.1"
+    "lodash": "^4.*.*"
   }
 }
