--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-config-google": "^0.6.0",
     "eslint-config-morsedigital": "^1.0.3",
     "eslint-plugin-jasmine": "^1.8.1",
+    "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^2.0.0",
