--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@morsedigital/morse-utils",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Utility Functions for Morse Site/App",
   "main": "index.js",
   "scripts": {
@@ -29,34 +29,30 @@
   },
   "homepage": "https://github.com/djforth/morse-utils#readme",
   "devDependencies": {
-    "@djforth/ap_karma_wp": "^2.0.1",
+    "@djforth/ap_karma_wp": "^2.0.2",
     "@djforth/ap_utils": "^3.0.4",
-    "@djforth/cookie_mgmt_fp": "^1.0.2",
+    "@djforth/cookie_mgmt_fp": "^1.0.3",
     "@djforth/morse-jasmine-wp": "^2.4.2",
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.4.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-lodash-modularize": "^0.3.2",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-airbnb": "^2.1.1",
+    "babel-preset-airbnb": "^2.2.3",
     "babel-preset-babili": "^0.0.12",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-es2016": "^6.22.0",
-    "babel-preset-es2017": "^6.22.0",
-    "browserslist": "^1.7.7",
-    "eslint": "^3.7.1",
-    "eslint-config-google": "^0.7.1",
-    "eslint-config-morsedigital": "^1.0.3",
-    "eslint-plugin-jasmine": "^2.2.0",
-    "jasmine-core": "^2.5.2",
-    "lodash": "~4.17.4",
-    "lodash-webpack-plugin": "^0.11.2",
-    "webpack": "^2.3.2",
-    "webpack-dev-server": "^2.4.2"
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "browserslist": "^2.1.1",
+    "eslint": "^3.19.0",
+    "eslint-config-morsedigital": "^1.2.3",
+    "lodash": "^4.17.4",
+    "lodash-webpack-plugin": "^0.11.3",
+    "webpack": "^2.5.0",
+    "webpack-dev-server": "^2.4.5"
   },
   "peerDependencies": {
     "@djforth/cookie_mgmt_fp": ">=1.0.2",
