--- a/.babelrc
+++ b/.babelrc
@@ -1,40 +1,41 @@
 {
   "presets": [
-    [
-      "es2015", {"modules": false}
-    ],
+    ["es2015", {"modules": false}],
     "es2016",
-    "es2017",
-    [
-      "env",
-      {
-        "targets": {
-          "browsers": [
-            "last 2 versions",
-            "chrome >= 55",
-            "IE >= 11"
-          ]
-        }
-      }
-    ]
+    "es2017"
   ],
   "env": {
+    "production": {
+      "plugins": [
+        "lodash"
+      ]
+      , "presets": [
+        ["env", {
+          modules: 'umd',
+          "targets": {
+              'node': 4,
+              "browsers": [
+                "last 2 versions",
+                "chrome >= 55",
+                "IE >= 11"
+              ]
+            }
+        }]
+        , 'babili'
+      ]
+    },
     "test": {
       "plugins": [
+
         [
           "istanbul",
           {
             "exclude": [
-              "**/*.spec.js"
+              "**/*_spec.js"
             ]
           }
         ],
         "rewire"
-      ]
-    },
-    "production": {
-      "presets": [
-        "babili"
       ]
     }
   }
