--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@morsedigital/morse-utils",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Utility Functions for Morse Site/App",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -x '.js'  -d lib",
+    "build": "NODE_ENV=production babel src -x '.js'  -d lib",
     "build:watch": "babel src -x '.js' -w --source-maps  -d lib",
     "lint": "eslint src/**",
     "lint:tests": "eslint spec/**",
@@ -38,7 +38,7 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash-modularize": "^0.3.2",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-polyfill": "^6.23.0",
     "babel-preset-airbnb": "^2.2.3",
     "babel-preset-babili": "^0.0.12",
