--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
     "production": {
       "plugins": [
         "lodash"
+        , "add-module-exports"
       ]
       , "presets": [
         ["env", {
@@ -21,7 +22,7 @@
               ]
             }
         }]
-        , 'babili'
+        , 'minify'
       ]
     },
     "test": {
