--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@morsedigital/morse-utils",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Utility Functions for Morse Site/App",
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production babel src -x '.js'  -d lib",
-    "build:watch": "babel src -x '.js' -w --source-maps  -d lib",
+    "build:watch": "NODE_ENV=production babel src -x '.js' -w --source-maps  -d lib",
     "lint": "eslint src/**",
     "lint:tests": "eslint spec/**",
     "test": "./node_modules/.bin/asset-pipeline-karma",
@@ -29,30 +29,31 @@
   },
   "homepage": "https://github.com/djforth/morse-utils#readme",
   "devDependencies": {
-    "@djforth/ap_karma_wp": "^2.0.2",
-    "@djforth/ap_utils": "^3.0.4",
+    "@djforth/ap_karma_wp": "^2.1.0",
+    "@djforth/ap_utils": "^3.1.2",
     "@djforth/cookie_mgmt_fp": "1.1.0",
     "@djforth/morse-jasmine-wp": "^2.4.2",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-lodash": "^3.2.11",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-airbnb": "^2.2.3",
-    "babel-preset-babili": "^0.0.12",
-    "babel-preset-env": "^1.4.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-airbnb": "^2.4.0",
+    "babel-preset-babili": "^0.1.4",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "browserslist": "^2.1.1",
-    "eslint": "^3.19.0",
-    "eslint-config-morsedigital": "^1.2.3",
+    "babel-preset-minify": "^0.2.0",
+    "browserslist": "^2.3.3",
+    "eslint": "^4.5.0",
+    "eslint-config-morsedigital": "^2.0.1",
     "lodash": "^4.17.4",
-    "lodash-webpack-plugin": "^0.11.3",
-    "webpack": "^2.5.0",
-    "webpack-dev-server": "^2.4.5"
+    "lodash-webpack-plugin": "^0.11.4",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   },
   "peerDependencies": {
     "@djforth/cookie_mgmt_fp": ">=1.0.2",
