--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,5 @@
 {
-  "presets": [
-    ["es2015", {"modules": false}],
-    "es2016",
-    "es2017"
-  ],
+  "presets": [],
   "env": {
     "production": {
       "plugins": [
