--- a/package.json
+++ b/package.json
@@ -29,34 +29,28 @@
   },
   "homepage": "https://github.com/djforth/morse-utils#readme",
   "devDependencies": {
-    "@djforth/ap_karma_wp": "^2.1.0",
+    "@djforth/ap_karma_wp": "^3.0.2",
     "@djforth/ap_utils": "^3.1.2",
-    "@djforth/cookie_mgmt_fp": "1.1.0",
-    "@djforth/morse-jasmine-wp": "^2.4.2",
+    "@djforth/morse-jasmine-wp": "^2.5.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-lodash": "^3.2.11",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-airbnb": "^2.4.0",
-    "babel-preset-babili": "^0.1.4",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
     "babel-preset-minify": "^0.2.0",
-    "browserslist": "^2.3.3",
-    "eslint": "^4.5.0",
-    "eslint-config-morsedigital": "^2.0.1",
-    "lodash": "^4.17.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.2.0",
+    "browserslist": "^2.5.1",
+    "eslint": "^4.9.0",
+    "eslint-config-morsedigital": "^2.1.1",
     "lodash-webpack-plugin": "^0.11.4",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.2"
   },
-  "peerDependencies": {
-    "@djforth/cookie_mgmt_fp": ">=1.0.2",
-    "lodash": ">=4.*.*"
+  "dependencies": {
+    "@djforth/cookie_mgmt_fp": ">=1.1.0",
+    "lodash": ">=4.17.4"
   }
 }
