--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Utility Functions for Morse Site/App",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production babel src -x '.js'  -d lib",
+    "build": "NODE_ENV=production rollup -c",
     "build:watch": "babel src -x '.js' -w --source-maps  -d lib",
     "lint": "eslint src/** --fix",
     "lint:tests": "eslint __tests__/** --fix",
@@ -26,41 +26,39 @@
   "homepage": "https://github.com/djforth/morse-utils#readme",
   "devDependencies": {
     "@djforth/cookie_mgmt_fp": "1.1.0",
-    "@djforth/jest-call-helpers": "^1.1.0",
-    "@djforth/jest-matchers": "^1.2.0",
-    "@djforth/stubs-spy-manager-jest": "^1.1.1",
+    "@djforth/jest-call-helpers": "^1.3.0",
+    "@djforth/jest-matchers": "^1.5.2",
+    "@djforth/stubs-spy-manager-jest": "^1.2.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-jest": "^22.4.3",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-rewire": "^1.1.0",
     "babel-plugin-rewire-ignore-coverage": "^2.0.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-airbnb": "^2.4.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-minify": "^0.2.0",
-    "browserslist": "^2.1.1",
-    "eslint": "^4.5.0",
-    "eslint-config-morsedigital-jest": "^2.0.0",
-    "immutable": "^3.8.1",
-    "jest": "^20.0.4",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "rollup": "^0.48.2",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.1.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-uglify": "^2.0.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.4.0",
+    "browserslist": "^3.2.6",
+    "eslint": "^4.19.1",
+    "eslint-config-morsedigital-prettier": "^1.2.2",
+    "eslint-plugin-import": "^2.11.0",
+    "immutable": "^3.8.2",
+    "jest": "^22.4.3",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.1",
+    "rollup": "^0.58.2",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^3.0.0",
     "rollup-watch": "^4.3.1"
   },
   "peerDependencies": {
-    "@djforth/cookie_mgmt_fp": ">=1.0.2",
-    "lodash": ">=4.*.*"
+    "@djforth/cookie_mgmt_fp": "^1.2.1",
+    "lodash": "^4.17.10"
   }
 }
