--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@morsedigital/morse-utils",
-  "version": "2.0.0",
+  "version": "4.0.0",
   "description": "Utility Functions for Morse Site/App",
   "main": "index.js",
   "scripts": {
@@ -25,40 +25,41 @@
   },
   "homepage": "https://github.com/djforth/morse-utils#readme",
   "devDependencies": {
-    "@djforth/cookie_mgmt_fp": "1.1.0",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-destructuring": "^7.3.2",
+    "@babel/plugin-transform-regenerator": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.4",
+    "@djforth/cookie_mgmt_fp": "1.2.1",
     "@djforth/jest-call-helpers": "^1.3.0",
     "@djforth/jest-matchers": "^1.5.2",
     "@djforth/stubs-spy-manager-jest": "^1.2.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^22.4.3",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash": "^3.3.2",
-    "babel-plugin-rewire": "^1.1.0",
-    "babel-plugin-rewire-ignore-coverage": "^2.0.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-airbnb": "^2.4.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-minify": "^0.4.0",
-    "browserslist": "^3.2.6",
-    "eslint": "^4.19.1",
-    "eslint-config-morsedigital-prettier": "^1.2.2",
-    "eslint-plugin-import": "^2.11.0",
+    "babel-core": "^7.0.0-bridge",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.5.0",
+    "babel-plugin-lodash": "^3.3.4",
+    "browserslist": "^4.4.2",
+    "eslint": "^5.15.1",
+    "eslint-config-morsedigital-prettier": "^2.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "immutable": "^3.8.2",
-    "jest": "^22.4.3",
-    "lodash": "^4.17.10",
-    "moment": "^2.22.1",
-    "rollup": "^0.58.2",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^3.0.0",
+    "jest": "^24.5.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
+    "rollup": "^1.6.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-uglify": "^6.0.2",
     "rollup-watch": "^4.3.1"
   },
   "peerDependencies": {
     "@djforth/cookie_mgmt_fp": "^1.2.1",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.11"
   }
 }
