--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production rollup -c",
-    "build:watch": "babel src -x '.js' -w --source-maps  -d lib",
+    "build:watch": "NODE_ENV=production rollup -c -w",
     "lint": "eslint src/** --fix",
     "lint:tests": "eslint __tests__/** --fix",
     "test": "jest --coverage --config jest.config.json",
@@ -25,36 +25,36 @@
   },
   "homepage": "https://github.com/djforth/morse-utils#readme",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-destructuring": "^7.3.2",
-    "@babel/plugin-transform-regenerator": "^7.3.4",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/plugin-transform-destructuring": "^7.4.4",
+    "@babel/plugin-transform-regenerator": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@djforth/cookie_mgmt_fp": "1.2.1",
     "@djforth/jest-call-helpers": "^1.3.0",
-    "@djforth/jest-matchers": "^1.5.2",
+    "@djforth/jest-matchers": "^2.0.0-0",
     "@djforth/stubs-spy-manager-jest": "^1.2.0",
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.5.0",
+    "babel-jest": "^24.8.0",
     "babel-plugin-lodash": "^3.3.4",
-    "browserslist": "^4.4.2",
-    "eslint": "^5.15.1",
+    "browserslist": "^4.5.6",
+    "eslint": "^5.16.0",
     "eslint-config-morsedigital-prettier": "^2.1.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.2",
     "immutable": "^3.8.2",
-    "jest": "^24.5.0",
+    "jest": "^24.8.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "rollup": "^1.6.0",
+    "rollup": "^1.11.3",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
-    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.3",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-uglify": "^6.0.2",
     "rollup-watch": "^4.3.1"
   },
