--- a/package.json
+++ b/package.json
@@ -25,38 +25,41 @@
   },
   "homepage": "https://github.com/djforth/morse-utils#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-destructuring": "^7.4.4",
-    "@babel/plugin-transform-regenerator": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-destructuring": "^7.8.3",
+    "@babel/plugin-transform-regenerator": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
     "@djforth/cookie_mgmt_fp": "1.2.1",
     "@djforth/jest-call-helpers": "^1.3.0",
-    "@djforth/jest-matchers": "^2.0.0-0",
+    "@djforth/jest-matchers": "^2.2.1",
     "@djforth/stubs-spy-manager-jest": "^1.2.0",
     "babel-core": "^7.0.0-bridge",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.1.0",
     "babel-plugin-lodash": "^3.3.4",
-    "browserslist": "^4.6.0",
-    "eslint": "^5.16.0",
-    "eslint-config-morsedigital-prettier": "^2.1.0",
-    "eslint-plugin-import": "^2.17.3",
-    "jest": "^24.8.0",
-    "lodash": "^4.17.11",
-    "rollup": "^1.12.4",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.0",
+    "browserslist": "^4.8.6",
+    "eslint": "^6.8.0",
+    "eslint-config-morsedigital-prettier": "^2.3.0",
+    "eslint-plugin-import": "^2.20.1",
+    "jest": "^25.1.0",
+    "lodash": "^4.17.15",
+    "rollup": "^1.31.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-uglify": "^6.0.2",
+    "rollup-plugin-uglify": "^6.0.4",
     "rollup-watch": "^4.3.1"
   },
   "peerDependencies": {
     "@djforth/cookie_mgmt_fp": "^1.2.1",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.15"
+  },
+  "dependencies": {
+    "core-js": "3"
   }
 }
