--- a/package.json
+++ b/package.json
@@ -37,6 +37,12 @@
     "@djforth/jest-call-helpers": "^1.3.0",
     "@djforth/jest-matchers": "^2.2.1",
     "@djforth/stubs-spy-manager-jest": "^1.2.0",
+    "@rollup/plugin-alias": "^3.0.1",
+    "@rollup/plugin-auto-install": "^2.0.0",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@rollup/plugin-strip": "^1.3.2",
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
@@ -48,10 +54,14 @@
     "jest": "^25.1.0",
     "lodash": "^4.17.15",
     "rollup": "^1.31.0",
+    "rollup-plugin-analyzer": "^3.2.2",
+    "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-banner": "^0.2.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-uglify": "^6.0.4",
     "rollup-watch": "^4.3.1"
   },
